--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,40 @@
 {
-    "name": "nrml-co/nova-big-filter",
-    "description": "A nice looking filter menu thats always open.",
-    "keywords": [
-        "laravel",
-        "nova",
-        "filter",
-        "card"
-    ],
-    "license": "MIT",
-    "require": {
-        "php": ">=7.1.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "NrmlCo\\NovaBigFilter\\": "src/"
-        }
-    },
-    "extra": {
-        "laravel": {
-            "providers": [
-                "NrmlCo\\NovaBigFilter\\CardServiceProvider"
-            ]
-        }
-    },
-    "config": {
-        "sort-packages": true
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+  "name": "njimx/nova-big-filter",
+  "description": "A nice looking filter menu thats always open.",
+  "keywords": [
+    "laravel",
+    "nova",
+    "filter",
+    "card"
+  ],
+  "license": "MIT",
+  "require": {
+    "php": ">=7.1.0"
+  },
+  "require-dev": {
+    "laravel/nova": "^4.0"
+  },
+  "repositories": [
+    {
+      "type": "composer",
+      "url": "https://nova.laravel.com"
+    }
+  ],
+  "autoload": {
+    "psr-4": {
+      "NrmlCo\\NovaBigFilter\\": "src/"
+    }
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "NrmlCo\\NovaBigFilter\\CardServiceProvider"
+      ]
+    }
+  },
+  "config": {
+    "sort-packages": true
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
